# clash-driven-neural-scheduler

./: .gitignore  README.md  engine.py  pyproject.toml  run_sensitivity.py  sensitivity.py  time_table_app.py
data_visuals/: stats.csv
models/: autoassociator.py  course.py  course_array.py
scripts/: _fix_paper.py  experiment_utils.py  extract_paper_baselines.py  generate_algorithm_diagram.py  generate_algorithm_plot.py  generate_contrast_plot.py  generate_custom_visuals.py  generate_paper.py  generate_presentation.py  generate_standard_results_plot.py  inspect_project_structure.py  make_experiment_report.py  plot_dynamic_hopfield_results.py  run_clash_dynamics.py  run_clash_dynamics_rolling.py  run_dynamic_hopfield_experiments.py  run_extended_dynamics.py  run_min_timeslot_experiment.py  visualize.py
sensitivity_figs/: interpretation.md  summary.json  summary.txt
sensitivity_figs/car-f-92/: grid.csv  notes.txt  report.json
sensitivity_figs/car-s-91/: grid.csv  notes.txt  report.json
sensitivity_figs/ear-f-83/: grid.csv  notes.txt  report.json
sensitivity_figs/hec-s-92/: grid.csv  notes.txt  report.json
sensitivity_figs/kfu-s-93/: grid.csv  notes.txt  report.json
sensitivity_figs/lse-f-91/: grid.csv  notes.txt  report.json
sensitivity_figs/pur-s-93/: grid.csv  notes.txt  report.json
sensitivity_figs/rye-s-93/: grid.csv  notes.txt  report.json
sensitivity_figs/sta-f-83/: grid.csv  notes.txt  report.json
sensitivity_figs/tre-s-92/: grid.csv  notes.txt  report.json
sensitivity_figs/uta-s-92/: grid.csv  notes.txt  report.json
(+6 files in other folders)
