[project]
name = "at-capstone"
version = "0.1.0"
description = "Dynamic timetable scheduler using a Hopfield autoassociator"
requires-python = ">=3.11"
authors = [
    { name = "Alex Hayrapetyan", email = "alexhayrapetyan99@gmail.com" },
]
dependencies = [
    "markdown>=3.10.2",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
